--- a/styles.css
+++ b/styles.css
@@ -308,4 +308,15 @@
     --window-color3: #777;
     --window-color4: #777;
     }
+      
+  .sky {
+    background: radial-gradient(
+        closest-corner circle at 15% 15%,
+        #ccc,
+        #ccc 20%,
+        #445 21%,
+        #223 100%
+      );
+  }
+
 }
